# cc_mobile

./: .Dockerfile  .dockerignore  .gitignore  .secrets.example  =7.0.0  App.js  CORS_EXPLANATION.md  Dockerfile  FINAL_SUMMARY.md  FIX_ENV_ERRORS.md  MIGRATION_PROGRESS.md  MONGODB_SETUP.md  OPTIONAL_STEPS_COMPLETE.md  QUICK_START_MONGODB.md  RENDER_DEPLOYMENT.md  RENDER_SETUP.md  START_SERVER.md  USER_API_DOCUMENTATION.md  USER_CRUD_GUIDE.md  USER_SCHEMA_GUIDE.md  WSL_PORT_FORWARDING_FIX.md  WSL_SETUP_GUIDE.md  WSL_WEASYPRINT_FIX.md  build.sh  check_env.py  check_redis.py  check_redis_install.sh  clear-all-cache.py  copy-docker-tmp.sh  default_personality_profiles.json  docker-build.sh  docker-run.sh  docker_full_build.sh  fix_wsl_port_forwarding.ps1  fix_wsl_port_forwarding_commands.txt  get-changed-py.sh  git-ios-fetch.sh  install_pymupdf_wsl.sh  install_pymupdf_wsl_fix.sh  install_weasyprint_deps.sh  (+41 more)
app/: __init__.py  main.py  test.docx
debug/: stripe.py
documentation/: ADDITIONAL_INSTRUCTIONS_DEBUG.md  BACKEND_DOCX_PARAGRAPH_AND_LINE_BREAKS.md  BACKEND_GENERATION_CREDITS_REQUIREMENTS.md  BACKEND_REVERSION_GUIDE.md  BACKEND_STRIPE_REQUIREMENTS.md  BACKEND_SUBSCRIPTION_IDS_REQUIREMENT.md  BRANCH_PARITY_AUDIT.md  BRANCH_PARITY_AUDIT_LOCAL_VS_MS.md  COVER_LETTER_DOCX_FLOW.md  COVER_LETTER_GENERATION_API.md  COVER_LETTER_MANAGEMENT_API.md  DEFAULT_PERSONALITY_PROFILE_API copy.md  DEFAULT_PERSONALITY_PROFILE_API.md  DOCX_SOURCE_OF_TRUTH_FRONTEND_GUIDE.md  DOCX_TO_PDF_API.md  EMAIL_VERIFICATION_API.md  ENDPOINT_PROTECTION_GUIDE.md  ENV_SETUP_S3.md  ENV_UPGRADE_CHECKLIST.md  FILE_MANAGEMENT_API.md  FRONTEND_API_GUIDE.md  FRONTEND_COVER_LETTER_AND_PRINT_REQUIREMENTS.md  FRONTEND_DOCX_IMPLEMENTATION_GUIDE.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_JWT_INTEROP_IMPACT.md  FRONTEND_LAST_RESUME_CONTRACT.md  FRONTEND_SMS_OPT_IN_REGISTRATION_UPDATE.md  FRONTEND_VERIFICATION_ERROR_HANDLING.md  FRONTEND_WEBVIEW_EMBEDDING.md  GET_USER_BY_EMAIL_API.md  HEALTH_CHECK_API.md  JOB_URL_ANALYSIS_API.md  JOB_URL_ANALYZER.md  JWT_AUTHENTICATION.md  JWT_DOTNET_INTEROP.md  (+51 more)
scripts/: README.md  (+10 more)
(+107 files in other folders)
