[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-mobile"
version = "1.0.0"
description = "Cover Letter API - FastAPI application for cover letter generation"
readme = "REFACTORING_SUMMARY.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["fastapi", "cover-letter", "api", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

dependencies = [
    "python-dotenv",
    "openai",
    "anthropic",
    "google-generativeai",
    "huggingface-hub",
    "requests>=2.31.0",
    "oci",
    "pydantic",
    "fastapi",
    "scikit-learn>=1.2.0",
    "xai",
    "ollama",
    "cycler",
    "kiwisolver",
    "matplotlib>=3.6.0,<4.0.0",
    "PyPDF2",
    "boto3",
    "pymongo",
    "bcrypt",
    "uvicorn",
    "email-validator",
    "markdown",
    "weasyprint",
    "html5lib>=1.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "twilio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

